--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,10 @@ height: 664px; */
     display: flex;
     flex-direction: column-reverse;
     border-radius: 20px;
-    padding: 17.2% 2.2% 17.2% 2.2%;
+    height: 924px;
+    width: 27.7%;
+    justify-content: center;
+    align-items: center;
     margin: 2.7%;
     gap: 20px;
     box-shadow: 1px 1px 20px var(--color-terciario);
@@ -141,6 +144,43 @@ width: 400px; */
     flex-direction: column;
     gap: 16px;
     text-align: center;
+}
+
+.cuerpo_texto_encriptado{
+    font-size: 1.5rem;
+    width: 23.3%;
+    height: 781px;
+    background-color: white;
+    border: solid white;
+    font-family: var(--fuente-inter);
+    resize: none;
+}
+
+.cuerpo_texto_encriptado::placeholder{
+    color: var(--color-secundario);
+}
+
+.cuerpo_texto_encriptado:focus{
+    border: solid var(--color-primario);
+    outline: none;
+    color: var(--color-secundario);
+}
+
+.boton_copiar{
+    height: 67px;
+    width: 336px;
+    font-size: 1rem;
+    border-radius: 20px;
+    border: var(--color-secundario) 1.5px solid;
+    background-color: var(--color-terciario);
+    color: var(--color-secundario);
+    box-shadow: 1px 1px 20px var(--color-terciario);
+}
+
+.boton_copiar:hover{
+    border: var(--color-secundario) 1.5px solid;
+    background-color: var(--color-secundario);
+    color: var(--color-primario); 
 }
 
 .cuerpo_imagen_muneco{
@@ -158,7 +198,7 @@ width: 400px; */
     font: bold 2px var(--color-secundario);
 }
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 420px){
 
     .encabezado_inicial_imagen{
         margin: 6.4% 4.2%;
@@ -188,17 +228,30 @@ width: 400px; */
         width: 95.6%;
     }
 
+    .boton_copiar{
+        width: 95.6%;
+    }
+
     .cuerpo_seccion_salida{
-        margin: 8.5% 6.4% 10.6% 6.4%;
-        padding: 8.5%;
+        width: 87.2%;
+        height: 186px;
+        margin: 5.5%;
     }
     
     .cuerpo_imagen_muneco{
         display: none;
     }  
+
+    .cuerpo_texto_encriptado{
+        padding: 1%;
+        margin-left: 32px;
+        margin-right: 32px;
+        width: 85%;
+        height: 100%;
+    }
 }
 
-@media screen and (max-width: 768px) and (min-width: 376px){
+@media screen and (max-width: 820px) and (min-width: 421px){
 
         .encabezado_inicial_imagen{
             margin: 9.5% 5.2%;
@@ -218,11 +271,18 @@ width: 400px; */
         }
         
         .cuerpo_seccion_salida{
+            width: 89.5%;
+            height: 133px;
+            margin-left: 5.5%;
+            margin-right: 5.5%;
             margin-top: 0;
-            padding: 4.1%;
         }
         
         .cuerpo_imagen_muneco{
             display: none;
         }  
+
+        .cuerpo_texto_encriptado{
+            width: 85.6%;
+        }
 }
