--- a/styles/style.css
+++ b/styles/style.css
@@ -126,12 +126,14 @@ height: 664px; */
     background-color: white;
     display: flex;
     flex-direction: column-reverse;
-    border-radius: 20px;
-    height: 924px;
-    width: 27.7%;
     justify-content: center;
     align-items: center;
+    border-radius: 20px;
+    height: 924px;
+    max-height: 924px;
+    width: 27.7%;
     margin: 2.7%;
+    padding: 2.2%;
     gap: 20px;
     box-shadow: 1px 1px 20px var(--color-terciario);
 }
@@ -147,13 +149,15 @@ width: 400px; */
 }
 
 .cuerpo_texto_encriptado{
+    display: block;
     font-size: 1.5rem;
-    width: 84%;
-    height: 781px;
+    width: 100%;
+    max-height: 781px;
     background-color: white;
     border: solid white;
     font-family: var(--fuente-inter);
     resize: none;
+    box-sizing: border-box;
 }
 
 .cuerpo_texto_encriptado::placeholder{
@@ -168,7 +172,7 @@ width: 400px; */
 
 .boton_copiar{
     height: 67px;
-    width: 336px;
+    width: 84%;
     font-size: 1rem;
     border-radius: 20px;
     border: var(--color-secundario) 1.5px solid;
@@ -234,7 +238,6 @@ width: 400px; */
 
     .cuerpo_seccion_salida{
         width: 87.2%;
-        height: 186px;
         margin: 5.5%;
     }
     
@@ -243,11 +246,9 @@ width: 400px; */
     }  
 
     .cuerpo_texto_encriptado{
-        padding: 1%;
-        margin-left: 32px;
-        margin-right: 32px;
+        margin-left: 6.5%;
+        margin-right: 6.5%;
         width: 85%;
-        height: 100%;
         padding: 0;
     }
 }
@@ -273,7 +274,6 @@ width: 400px; */
         
         .cuerpo_seccion_salida{
             width: 89.5%;
-            height: 133px;
             margin-left: 5.5%;
             margin-right: 5.5%;
             margin-top: 0;
@@ -284,7 +284,7 @@ width: 400px; */
         }  
 
         .cuerpo_texto_encriptado{
-            width: 85.6%;
+            width: 100%;
             padding: 0;
         }
 }
